--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pillow = "*"
 psutil = "*"
 pyyaml = "*"
 cairocffi = "*"
+pytest-cov = "*"
+typer = "*"
 
 [dev-packages]
 black = "*"
@@ -25,6 +27,9 @@ pytest-sugar = "*"
 setuptools = "*"
 wheel = "*"
 twine = "*"
+responses = "*"
+pytest-cov = "*"
+bump2version = "*"
 
 [requires]
 python_version = "3.12"
