--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,6 @@ tag = True
 search = version="{current_version}"
 replace = version="{new_version}"
 
-[bumpversion:file:CHANGELOG.md]
+[bumpversion:file:CHANGELOG]
 search = ## [{current_version}]
 replace = ## [{new_version}]
