--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pytest-cov = "*"
 typer = "*"
 setuptools-scm = "*"
 mypy = "*"
+installer = "*"
 
 [dev-packages]
 black = "*"
@@ -36,6 +37,8 @@ sphinx = "*"
 sphinx-rtd-theme = "*"
 furo = "*"
 setuptools-scm = "*"
+build = "*"
+installer = "*"
 
 [requires]
 python_version = "3.12"
