feat(py): add settings ui

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,9 @@ typer = "*"
 setuptools-scm = "*"
 mypy = "*"
 installer = "*"
+ttkbootstrap = "*"
+tk = "*"
+"ruamel.yaml" = "*"
 
 [dev-packages]
 black = "*"
