feat(ci): allow run nightly branch

--- a/.github/workflows/qtile-test.yml
+++ b/.github/workflows/qtile-test.yml
@@ -5,11 +5,13 @@ on:
   push:
     branches:
       - main
+      - nightly
     paths:
       - 'ebenezer/**'
   pull_request:
     branches:
       - main
+      - nightly
     paths:
       - 'ebenezer/**'
 
