fix(ci): run tests

--- a/.github/workflows/qtile-test.yml
+++ b/.github/workflows/qtile-test.yml
@@ -8,12 +8,14 @@ on:
       - nightly
     paths:
       - 'ebenezer/**'
+      - '.github/workflows/**'
   pull_request:
     branches:
       - main
       - nightly
     paths:
       - 'ebenezer/**'
+      - '.github/workflows/**'
 
 jobs:
   test:
